fixed search bar not working on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -25,3 +25,7 @@
       scrollbar-width: none; /* Firefox */
     }
 }
+
+body {
+	-webkit-overflow-scrolling: touch;
+}
